# C-Discord-Token-Logger-Grabber

./: .clang-format  README.md  build.bat  meson.build
config/: config.c  config.h
include/: main.h
include/openssl/: configuration.h
src/: files.c  simple.c  token.c  utils.c  webhook.c
